### Include common Makefile configuration
#
include   $(top_srcdir)/build/Makefile.am.common



### First process all required subdirs
#
SUBDIRS = internals



### Include documentation in final release package
#
EXTRA_DIST = \
	CONTRIBUTING.md \
	FAQ.md \
	FILTER_exclude_spawns_of.md \
	INSTALL.md
